--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                       <div class="five wide column ">
                         <h4 class="ui header ">Contact</h4>
                         <div class="ui link list ">
-                          <p><a style="color:black" href="mailto:abdullahasiddiki@gmail.com?Subject=Microcontroller%20Club">Abdullah Ahmed Siddki, EE'18 (President)</a></p>
+                          <p><a style="color:black" href="mailto:abdullahasiddiki@gmail.com?Subject=Microcontroller%20Club">Abdullah Ahmad Siddki, EE'18 (President)</a></p>
                           <p>                         <a style="color:black" href="mailto:jeong2cu@gmail.com?Subject=Microcontroller%20Club">Andy (Jongoh) Jeong, EE'18 (Website) </a>     </p>                     </div>
                         </div>
                         <div class="four wide column" >
