--- a/members.html
+++ b/members.html
@@ -132,9 +132,10 @@
                 </div>-->
               </header>
               <body>
-               <section class="ui row content column segment stackable" style="height:100%">
+               <section class="ui row content column segment stackable" style="height:120%">
                <!-- members -->
-               <h2 class="ui center aligned header">Current Members</h2>
+               <h1 class="ui center aligned header">Current Members</h1>
+               <br /><br />
                <div class="doubling stackable three column ui grid container">
                 <div class="column">
                   <div class="ui relaxed divided items">
@@ -143,16 +144,17 @@
                         <img src="img/logo.png">
                       </div>
                       <div class="content">
-                        <a class="header">Name</a>
+                        <div class="header">Abdullah Ahmad Siddiki</div>
                         <div class="meta">
-                          <a>Major, Year</a>
+                          <div>EE, 2018</div>
                         </div>
                         <div class="description">
-                          Project Title
+                          <h4>Cooper Rover</h4>
+                          <h5>Control car from computer/smartphone</h5>
                         </div>
                         <div class="extra">
-                          <img src="img/logo.png" class="ui circular avatar image">Github 
-                          <a href="github.io"></a>
+                          <img src="img/logo.png" class="ui circular avatar image">
+                          <a href="http://www.github.com/siddiki">siddki</a>
                         </div>
                       </div>
                     </div>
@@ -164,16 +166,17 @@
                       <img src="img/logo.png">
                     </div>
                     <div class="content">
-                      <a class="header">Name</a>
+                      <div class="header">Yash Sharma</div>
                       <div class="meta">
-                        <a>Major, Year</a>
+                        <div>EE, 2018</div>
                       </div>
                       <div class="description">
-                        Project Title
+                        <h4>Cooper Rover</h4>
+                        <h5>Control car from computer/smartphone</h5>
                       </div>
                       <div class="extra">
-                        <img src="img/logo.png" class="ui circular avatar image">Github 
-                        <a href="github.io"></a>
+                        <img src="img/logo.png" class="ui circular avatar image">
+                        <a href="http://www.github.com/siddiki">siddiki</a>
                       </div>
                     </div>
                   </div>
@@ -185,16 +188,17 @@
                     <img src="img/logo.png">
                   </div>
                   <div class="content">
-                    <a class="header">Name</a>
+                    <div class="header">Abhinav Jain</div>
                     <div class="meta">
-                      <a>Major, Year</a>
+                        <div>EE, 2018</div>
                     </div>
                     <div class="description">
-                      Project Title
+                      <h4>Robalance</h4>
+                      <h5>Robot that balances and moves on a car</h5>
                     </div>
                     <div class="extra">
-                      <img src="img/logo.png" class="ui circular avatar image">Github 
-                      <a href="github.io"></a>
+                      <img src="img/logo.png" class="ui circular avatar image">
+                      <a href="http://www.github.com/krisht">krisht</a>
                     </div>
                   </div>
                 </div>
@@ -206,16 +210,17 @@
                   <img src="img/logo.png">
                 </div>
                 <div class="content">
-                  <a class="header">Name</a>
+                  <div class="header">Radhakrishnan Thiyagarajan</div>
                   <div class="meta">
-                    <a>Major, Year</a>
+                        <div>EE, 2018</div>
                   </div>
                   <div class="description">
-                    Project Title
+                    <h4>Robalance</h4>
+                    <h5>Robot that balances and moves on a car</h5>
                   </div>
                   <div class="extra">
-                    <img src="img/logo.png" class="ui circular avatar image">Github 
-                    <a href="github.io"></a>
+                    <img src="img/logo.png" class="ui circular avatar image">
+                    <a href="http://www.github.com/krisht">krisht</a>
                   </div>
                 </div>
               </div>
@@ -227,16 +232,17 @@
                 <img src="img/logo.png">
               </div>
               <div class="content">
-                <a class="header">Name</a>
+                <div class="header">Jailun Bao</div>
                 <div class="meta">
-                  <a>Major, Year</a>
+                        <div>EE, 2018</div>
                 </div>
                 <div class="description">
-                  Project Title
+                  <h4>Pong</h4>
+                  <h5>FPGA Arcade Game</h5>
                 </div>
                 <div class="extra">
-                  <img src="img/logo.png" class="ui circular avatar image">Github 
-                  <a href="github.io"></a>
+                  <img src="img/logo.png" class="ui circular avatar image">
+                  <a href="http://www.github.com/jollybao">jollybao</a>
                 </div>
               </div>
             </div>
@@ -248,16 +254,17 @@
               <img src="img/logo.png">
             </div>
             <div class="content">
-              <a class="header">Name</a>
+              <div class="header">Andy (Jongoh) Jeong</div>
               <div class="meta">
-                <a>Major, Year</a>
+                        <div>EE, 2018</div>
               </div>
               <div class="description">
-                Project Title
+                <h4>Delivery Car</h4>
+                <h5>an Arduino-based delivery unit for a single-floor carrying load purpose</h5>
               </div>
               <div class="extra">
-                <img src="img/logo.png" class="ui circular avatar image">Github 
-                <a href="github.io"></a>
+                <img src="img/logo.png" class="ui circular avatar image">
+                <a href="http://www.github.com/andyj1">andyj1</a>
               </div>
             </div>
           </div>
@@ -269,16 +276,17 @@
             <img src="img/logo.png">
           </div>
           <div class="content">
-            <a class="header">Name</a>
+            <div class="header">Hyungseok Yoon</div>
             <div class="meta">
-              <a>Major, Year</a>
+                        <div>EE, 2018</div>
             </div>
             <div class="description">
-              Project Title
+              <h4>Delivery Car</h4>
+              <h5>an Arduino-based delivery unit for a single-floor carrying load purpose</h5>
             </div>
             <div class="extra">
-              <img src="img/logo.png" class="ui circular avatar image">Github 
-              <a href="github.io"></a>
+              <img src="img/logo.png" class="ui circular avatar image">
+              <a href="http://www.github.com/andyj1">andyj1</a>
             </div>
           </div>
         </div>
@@ -290,12 +298,13 @@
           <img src="img/logo.png">
         </div>
         <div class="content">
-          <a class="header">Name</a>
+          <div class="header">Issei Yamada</div>
           <div class="meta">
-            <a>Major, Year</a>
+                        <div>ME, 2018</div>
           </div>
           <div class="description">
-            Project Title
+            <h4>Title</h4>
+            <h5>Description</h5>
           </div>
           <div class="extra">
             <img src="img/logo.png" class="ui circular avatar image">Github 
@@ -304,19 +313,21 @@
         </div>
       </div>
     </div>
-  </div><div class="column">
+  </div>
+  <div class="column">
   <div class="ui relaxed divided items">
     <div class="item">
       <div class="ui small image">
         <img src="img/logo.png">
       </div>
       <div class="content">
-        <a class="header">Name</a>
+        <div class="header">Do Hyung Kwon</div>
         <div class="meta">
-          <a>Major, Year</a>
+                        <div>EE, 2019</div>
         </div>
         <div class="description">
-          Project Title
+          <h4>Autonomous Car with Vision</h4>
+          <h5>Autonomous Car using imaging processing and sensors with raspberry pi and opencv</h5>
         </div>
         <div class="extra">
           <img src="img/logo.png" class="ui circular avatar image">Github 
@@ -325,28 +336,101 @@
       </div>
     </div>
   </div>
-</div><div class="column">
+  </div>
+  <div class="column">
+  <div class="ui relaxed divided items">
+    <div class="item">
+      <div class="ui small image">
+        <img src="img/logo.png">
+      </div>
+      <div class="content">
+        <div class="header">Daniel Nohimovich</div>
+        <div class="meta">
+                        <div>EE, 2019</div>
+        </div>
+        <div class="description">
+          <h4>Autonomous Car with Vision</h4>
+          <h5>Autonomous Car using imaging processing and sensors with raspberry pi and opencv</h5>
+        </div>
+        <div class="extra">
+          <img src="img/logo.png" class="ui circular avatar image">Github 
+          <a href="github.io"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div class="column">
+  <div class="ui relaxed divided items">
+    <div class="item">
+      <div class="ui small image">
+        <img src="img/logo.png">
+      </div>
+      <div class="content">
+        <div class="header">Varouzan Knouni</div>
+        <div class="meta">
+                        <div>EE, 2019</div>
+        </div>
+        <div class="description">
+          <h4>Autonomous Car with Vision</h4>
+          <h5>Autonomous Car using imaging processing and sensors with raspberry pi and opencv</h5>
+        </div>
+        <div class="extra">
+          <img src="img/logo.png" class="ui circular avatar image">Github 
+          <a href="github.io"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div class="column">
+  <div class="ui relaxed divided items">
+    <div class="item">
+      <div class="ui small image">
+        <img src="img/logo.png">
+      </div>
+      <div class="content">
+        <div class="header">Padraic McAtee</div>
+        <div class="meta">
+                        <div>EE, 2019</div>
+        </div>
+        <div class="description">
+          <h4>Autonomous Car with Vision</h4>
+          <h5>Autonomous Car using imaging processing and sensors with raspberry pi and opencv</h5>
+        </div>
+        <div class="extra">
+          <img src="img/logo.png" class="ui circular avatar image">Github 
+          <a href="github.io"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+</div>
+<div class="column">
 
 </div>
+
 </div>
+
 </section>
-
 </body>
 
 <div class="ui divider"></div>
 <!-- footer -->
 <footer>
+    
   <div class="ui raised segment vertical footer segment">
     <div class="ui center aligned container">
       <div class="ui stackable divided grid ">
         <div class="five wide column ">
-          <h4 class="ui header ">Contact</h4>
+          <h5 class="ui header ">Contact</h5>
           <div class="ui link list ">
             <a style="color:black" href="mailto:abdullahasiddiki@gmail.com?Subject=Microcontroller%20Club">Abdullah Ahmed Siddki, EE'18 </a>
           </div>
         </div>
         <div class="four wide column" >
-          <h4 class="ui header">SNS</h4>
+          <h5 class="ui header">SNS</h5>
           <div class="ui link list">
            <a style="color:black"  class="sns " href="https://www.facebook.com/groups/306676019541186/" target="_blank"><span><img id="image" src="img/fb.png"  style="width:40px;height:40px"/>&nbsp;Facebook Group</span></a>
          </div>
