--- a/projects.html
+++ b/projects.html
@@ -173,16 +173,16 @@
                           <img src="img/logo.png">
                         </div>
                         <div class="content">
-                          <a class="header">Project Title</a>
+                          <a class="header">Autonomous Car with Vision</a>
                           <div class="meta">
-                            <a>Date / Semester</a>
+                            <a>Spring 2016</a>
                           </div>
                           <div class="description">
-                            A description of the project
+                            Autonomous Car using imaging processing and sensors with raspberry pi and opencv
                           </div>
                           <div class="extra">
-                            <img src="img/logo.png" class="ui circular avatar image">Github 
-                            <a href="github.io"></a>
+                            <img src="img/logo.png" class="ui circular avatar image">
+                            <a href="http://www.github.com">Github</a>
                           </div>
                         </div>
                       </div>
@@ -191,16 +191,16 @@
                           <img src="img/logo.png">
                         </div>
                         <div class="content">
-                          <a class="header">Project Title</a>
+                          <a class="header">Cooper Rover</a>
                           <div class="meta">
-                            <a>Date / Semester</a>
+                            <a>Spring 2016</a>
                           </div>
                           <div class="description">
-                            A description of the project
+                            Control car from computer/smartphone
                           </div>
                           <div class="extra">
-                            <img src="img/logo.png" class="ui circular avatar image">Github 
-                            <a href="github.io"></a>
+                            <img src="img/logo.png" class="ui circular avatar image"> 
+                            <a href="http://www.github.com/siddiki">siddiki</a>
                           </div>
                         </div>
                       </div>
@@ -209,16 +209,16 @@
                           <img src="img/logo.png">
                         </div>
                         <div class="content">
-                          <a class="header">Project Title</a>
+                          <a class="header">Robalance</a>
                           <div class="meta">
-                            <a>Date / Semester</a>
+                            <a>Spring 2016</a>
                           </div>
                           <div class="description">
-                            A description of the project
+                            Robot that balances and moves on a car
                           </div>
                           <div class="extra">
-                            <img src="img/logo.png" class="ui circular avatar image">Github 
-                            <a href="github.io"></a>
+                            <img src="img/logo.png" class="ui circular avatar image">
+                            <a href="http://www.github.com/krisht">krisht</a>
                           </div>
                         </div>
                       </div>
@@ -233,16 +233,16 @@
                           <img src="img/logo.png">
                         </div>
                         <div class="content">
-                          <a class="header">Project Title</a>
+                          <a class="header">Pong</a>
                           <div class="meta">
-                            <a>Date / Semester</a>
+                            <a>Spring 2016</a>
                           </div>
                           <div class="description">
-                            A description of the project
+                            FPGA Arcade Game
                           </div>
                           <div class="extra">
-                            <img src="img/logo.png" class="ui circular avatar image">Github 
-                            <a href="github.io"></a>
+                            <img src="img/logo.png" class="ui circular avatar image">
+                            <a href="http://www.github.com/jollybao">jollybao</a>
                           </div>
                         </div>
                       </div>
@@ -251,19 +251,20 @@
                           <img src="img/logo.png">
                         </div>
                         <div class="content">
-                          <a class="header">Project Title</a>
+                          <a class="header">Delivery Car</a>
                           <div class="meta">
-                            <a>Date / Semester</a>
+                            <a>Spring 2016</a>
                           </div>
                           <div class="description">
-                            A description of the project
+                            an Arduino-based delivery unit for a single-floor carrying load purpose
                           </div>
                           <div class="extra">
-                            <img src="img/logo.png" class="ui circular avatar image">Github 
-                            <a href="github.io"></a>
+                            <img src="img/logo.png" class="ui circular avatar image">
+                            <a href="http://www.github.com/andyj1">andyj1</a>
                           </div>
                         </div>
                       </div>
+                      <!--
                       <div class="item">
                         <div class="ui small image">
                           <img src="img/logo.png">
@@ -285,7 +286,7 @@
                     </div></div>
                     </section>
                     <section class="ui row content column segment stackable" style="height:100%">
-        <!--           <div class="ui divider"></div> -->
+        <!--           <div class="ui divider"></div> 
                       <div class="ui container">
                     <div class="ui relaxed divided items">
                       <div class="three item">
